<resources>
    <string name="app_name">Knittizer</string>
    <string name="title_activity_result">Результат</string>
    <string name="n_a_b">A</string>
    <string name="k_a_b">B</string>
    <string name="c_c">C</string>
    <string name="n_c">Начальный ряд</string>
    <string name="k_c">Конечный ряд</string>
    <string name="calculate">Расчёт</string>
    <string name="sample_calculate_menu">Расчёт образца</string>
    <string name="description_two_side_schema">Схема для прибавок (убавок)</string>
    <string name="double_knitting">Фасонная прибавка (убавка)</string>
    <string name="one_side_menu">Прибавка или убавка</string>
    <string name="two_side_menu">С двух сторон прибавка (убавка)</string>
    <string name="partial_knitting">Частичное вязание</string>
    <string name="a_n">единовременная убавка</string>
    <string name="save_name">Введите имя расчёта</string>
    <string name="a">Ширина</string>
    <string name="b">Высота</string>
    <string name="an">Петли(A)</string>
    <string name="bn">Ряды(B)</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="confirm_delete">Вы действительно желаете удалить это сохранение?</string>
    <string name="dialog_title">Сообщение</string>
    <string name="empty_value_error">Веедите число</string>
    <string name="equal_rows_error">Номера рядов не могут быть одинковыми</string>
    <string name="zero_value_error"><![CDATA[Веедите число > 0]]></string>
    <string name="one_value_error"><![CDATA[Веедите число > 1 или 0]]></string>
    <string name="empty_name_error">Введите имя</string>
    <string name="existing_name_error">Такое имя уже есть</string>
    <string name="sample_density">Плотность образца</string>
    <string name="w_density">п/см</string>
    <string name="h_density">р/см</string>
    <string name="save_done">Сохранено</string>
    <string name="total_phases">Всего фаз</string>
    <string name="decker">Деккер</string>
    <string name="pk">ЧВ</string>
    <string name="pk_graph_title">Схема: ↑ ряды, → петли</string>
    <string name="favorites">Избранное</string>
    <string name="num">кол.</string>
    <string name="cm">см</string>
    <string name="help">Справка</string>
    <string name="no_calculated_results">Нет результатов. Пожалуйста, проверьте правильность введённых данных.</string>
    <string name="error">Ошибка</string>
    <string name="division_by_zero_error">Дление на 0. Проверьте правильность данных.</string>
    <string name="saved_calculations">Расчёты</string>
    <string name="u">петли</string>
    <string name="r">ряды</string>
    <string name="r_do">убавить(прибавить) в указанных рядах</string>
    <string name="a_n_optional">*необязательно</string>
    <string name="decker_stitches">2 раза по 1 петле в каждом</string>
    <string name="in_row">ряду</string>
    <string name="s_do">убавить(прибавить) указанное количество петель</string>
    <string name="decker_do">убавить(прибавить) деккером</string>
    <string name="view">просмотр</string>
    <string name="add_n_times_every_m_rows">Прибавить %1$d раз в каждом %2$d ряду</string>
    <string name="add_n_times_every_m_rows_k_stitches">Прибавить %1$d раз в каждом %2$d ряду по %3$d петли</string>
    <string name="add_complex_n_m_p_q_r">Прибавить %1$d раз в каждом %2$d ряду и %3$d раз в каждом %4$d ряду</string>
    <string name="add_complex_n_m_k_p_q_r">Прибавить %1$d раз в каждом %2$d ряду по %3$d петли и %4$d раз в каждом %5$d ряду по %6$d петле</string>
    <string name="sub_n_times_every_m_rows">Убавить %1$d раз в каждом %2$d ряду</string>
    <string name="sub_n_times_every_m_rows_k_stitches">Убавить %1$d раз в каждом %2$d ряду по %3$d петли</string>
    <string name="sub_complex_n_m_p_q_r">Убавить %1$d раз в каждом %2$d ряду и %3$d раз в каждом %4$d ряду</string>
    <string name="sub_complex_n_m_k_p_q_r">Убавить %1$d раз в каждом %2$d ряду по %3$d петли и %4$d раз в каждом %5$d ряду по %6$d петле</string>
    <string name="or_with_newlines">или\n\n%s</string>

</resources>
