<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PartialKnittingCalculationActivity">

    <LinearLayout
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/button">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="280dp"
            android:background="@color/ic_launcher_background"
            android:contentDescription="@string/description_two_side_schema"
            android:src="@drawable/partial_short" />
    </LinearLayout>
    <Button
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:onClick="calculate"
        android:text="@string/calculate"
        android:background="@drawable/button_bg"
        android:textColor="@color/ic_launcher_background"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
            <TextView
                android:id="@+id/A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_a_b"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="@+id/editW"
                app:layout_constraintEnd_toStartOf="@+id/editW"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editW" />

            <EditText
                android:id="@+id/editW"
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:layout_marginStart="@dimen/short_fields_merging_start"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="@dimen/text_size"
                android:hint="@string/u"
                android:layout_marginEnd="90dp"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/k_a_b"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="@+id/editRows"
                app:layout_constraintEnd_toStartOf="@+id/editRows"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editRows" />

            <EditText
                android:id="@+id/editRows"
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="@dimen/short_fields_merging_start"
                android:ems="10"
                android:inputType="number"
                android:textSize="@dimen/text_size"
                android:hint="@string/r"
                android:layout_marginEnd="90dp"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/editW"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_c"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="@+id/editH"
                app:layout_constraintEnd_toStartOf="@+id/editH"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editH" />

            <EditText
                android:id="@+id/editH"
                android:layout_width="@dimen/long_field_size"
                android:layout_height="42dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/a_n"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="@dimen/text_size"
                app:layout_constraintStart_toStartOf="@+id/editRows"
                app:layout_constraintTop_toBottomOf="@+id/editRows" />

            <EditText
                android:id="@+id/editRowN"
                android:layout_width="@dimen/row_fields_size"
                android:layout_height="42dp"
                android:layout_marginTop="114dp"
                android:ems="10"
                android:hint="@string/n_c"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="53dp"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editRowK"
                android:layout_width="@dimen/row_fields_size"
                android:layout_height="42dp"
                android:ems="10"
                android:hint="@string/k_c"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textSize="@dimen/text_size"
                android:layout_marginStart="53dp"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/editRowN" />

            <ImageButton
                android:id="@+id/helpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/ic_launcher_background"
                android:contentDescription="@string/help"
                android:onClick="help"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/help" />
            <TextView
                android:id="@+id/helperText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_n_optional"
                android:textColor="@color/colorHelperText"
                app:layout_constraintStart_toStartOf="@+id/editH"
                app:layout_constraintTop_toBottomOf="@+id/editH" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>