<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".OneSideCalculationActivity">
    <LinearLayout
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/button">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="300dp"

        android:background="@color/cardview_light_background"
        android:contentDescription="@string/description_two_side_schema"
        android:src="@drawable/spinka_1" />
</LinearLayout>
    <Button
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:onClick="calculate"
        android:text="@string/calculate"
        android:background="@drawable/button_bg"
        android:textColor="@color/ic_launcher_background"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button">

            <EditText
                android:id="@+id/editU"
                android:layout_width="62dp"
                android:layout_height="42dp"
                android:layout_marginEnd="84dp"
                android:ems="10"
                android:hint="@string/n_a_b"
                android:inputType="number"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editUN"
                android:layout_width="62dp"
                android:layout_height="42dp"
                android:layout_marginEnd="84dp"
                android:ems="10"
                android:hint="@string/k_a_b"
                android:inputType="number"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editU" />

            <EditText
                android:id="@+id/editRows"
                android:layout_width="62dp"
                android:layout_height="42dp"
                android:layout_marginEnd="84dp"
                android:ems="10"
                android:hint="@string/c_c"
                android:inputType="number"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editUN" />

            <EditText
                android:id="@+id/editRowN"
                android:layout_width="137dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/n_c"
                android:inputType="number"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or" />

            <EditText
                android:id="@+id/editRowK"
                android:layout_width="137dp"
                android:layout_height="42dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/k_c"
                android:inputType="number"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editRowN"
                 />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="84dp"
                android:text="@string/or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editRows" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>