<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".DoubleFasonCalculationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:contentDescription="@string/description_two_side_schema"
            android:scaleType="fitCenter"
            android:src="@drawable/rukav_1"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="20sp"
        android:paddingRight="20sp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editUN"
                android:layout_width="320dp"
                android:layout_height="42dp"
                android:ems="10"
                android:hint="@string/n_a_b"
                android:inputType="number"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.00" />

            <EditText
                android:id="@+id/editUK"
                android:layout_width="320dp"
                android:layout_height="42dp"
                android:ems="10"
                android:hint="@string/k_a_b"
                android:inputType="number"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/editUN"
                app:layout_constraintVertical_bias="0.05" />

            <EditText
                android:id="@+id/editRows"
                android:layout_width="320dp"
                android:layout_height="42dp"
                android:ems="10"
                android:hint="@string/c_c"
                android:inputType="number"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/editUK"
                app:layout_constraintVertical_bias="0.05" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:text="@string/or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editRows" />

            <EditText
                android:id="@+id/editRowN"
                android:layout_width="320dp"
                android:layout_height="42dp"
                android:layout_marginBottom="40dp"
                android:ems="10"
                android:hint="@string/n_c"
                android:inputType="number"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/or"
                app:layout_constraintVertical_bias="0.05" />

            <EditText
                android:id="@+id/editRowK"
                android:layout_width="320dp"
                android:layout_height="42dp"
                android:layout_marginBottom="40dp"
                android:ems="10"
                android:hint="@string/k_c"
                android:inputType="number"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/editRowN"
                app:layout_constraintVertical_bias="0.05" />

            <Button
                android:id="@+id/button"
                android:layout_width="220dp"
                android:layout_height="42dp"
                android:onClick="calculate"
                android:text="@string/calculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editRowK" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>