<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_weight="12"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:background="@android:color/transparent">
    <TextView android:id="@+id/help1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textStyle="normal"
        android:textSize="18sp"
        android:textColor="@color/colorDelimiter"
        android:padding="3dp"
        android:text="@string/s_do"/>
    <TextView android:id="@+id/list1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryText"
        android:padding="3dp"
        android:layout_below="@+id/help1"
        android:text=""/>
    <TextView android:id="@+id/help2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textStyle="normal"
        android:textSize="18sp"
        android:textColor="@color/colorDelimiter"
        android:padding="3dp"
        android:layout_below="@+id/list1"
        android:text="@string/r_do"/>
    <TextView android:id="@+id/list2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryText"
        android:padding="3dp"
        android:layout_below="@+id/help2"
        android:text=""/>
    <TextView android:id="@+id/help3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textStyle="normal"
        android:textSize="13sp"
        android:textColor="@color/colorDelimiter"
        android:padding="3dp"
        android:layout_below="@+id/list2"
        android:text="@string/decker_do"
        android:visibility="gone"/>
    <TextView android:id="@+id/list3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textStyle="normal"
        android:textSize="13sp"
        android:textColor="@color/colorPrimaryText"
        android:padding="3dp"
        android:layout_below="@+id/help3"
        />
</RelativeLayout>